# strands-agents-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  OPERATIONS_RUNBOOK.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: devops-engineer.md  quality-engineer.md  security-reviewer.md  software-engineer.md
.github/workflows/: agent-deploy.yml
age_calculator/: __init__.py  agent.py  config.py  tools.py
infrastructure/: cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/lib/: agent-stack.ts
scripts/: check_threshold.py  rollback_alias.py  smoke_test.py
tests/: conftest.py
tests/evaluation/: ground_truth.py  test_ground_truth_dataset.py  test_refusal_accuracy.py  test_tool_selection.py
tests/integration/: test_agent_flows.py
tests/unit/: test_main.py
tests/unit/agent/: test_create_agent.py
tests/unit/config/: test_settings.py
tests/unit/tools/: test_calculate_days_between.py  test_get_current_date.py
